--- a/company-api/package.json
+++ b/company-api/package.json
@@ -13,15 +13,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
-    "util": "^0.12.4" 
+    "mysql": "^2.18.1" 
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.18"
   }
 }
